--- a/tech-news-projeto/index.html
+++ b/tech-news-projeto/index.html
@@ -207,7 +207,7 @@
         </article>
       </div>
     </section>
-    <div>
+    <aside>
       <div id="ads">
         <img src="./assets/images/Ads.png" alt="">
       </div>
@@ -227,7 +227,7 @@
             <div>
               <span class="content-tag">software</span>
               <h3 class="text-xl">
-                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...
+                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológic...
               </h3>
             </div>
           </article>
@@ -277,7 +277,7 @@
           </article>
         </div>
       </section>
-    </div>
+    </aside>
   </main>
 </body>
 
